<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:background="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:showIn="navigation_view">


        <group android:checkableBehavior="single">
            <!-- Home -->
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home" />


            <!-- Create Task -->
            <item
                android:id="@+id/nav_create_task"
                android:icon="@drawable/ic_add_task"
                android:title="@string/create_task" />


            <!--finished-->
            <item
                android:id="@+id/nav_finished"
                android:icon="@drawable/ic_finish"
                android:title="@string/finished"/>

            <!-- About -->
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_about" />

            <!--help-->
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help"/>

            <!-- Logout -->
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />

            <!-- Exit app -->
            <item
                android:id="@+id/nav_exit_app"
                android:icon="@drawable/ic_exit_app"
                android:title="@string/menu_exit_app" />
        </group>

</menu>
